--- a/myapp/templates/auth/register.html
+++ b/myapp/templates/auth/register.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body class="bg-gradient-primary">
+<body class="bg-gradient-dark">
 
     <div class="container">
 
@@ -30,8 +30,10 @@
             <div class="card-body p-0">
                 <!-- Nested Row within Card Body -->
                 <div class="row">
-                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
-                    <div class="col-lg-7">
+                    <div class="col-lg-5 d-none d-lg-block">
+                        <img class="img-fluid" src="{{ url_for('static', filename='img/pict2.jpg') }}" alt="">
+                    </div>
+                    <div class="col-lg-7 align-self-center">
                         <div class="p-5">
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
@@ -55,16 +57,16 @@
                                             id="exampleRepeatPassword" placeholder="Repeat Password">
                                     </div>
                                 </div>
-                                <a href="login.html" class="btn btn-primary btn-user btn-block">
+                                <a href="login.html" class="btn btn-dark btn-user btn-block">
                                     Register Account
                                 </a>
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                <a class="small text-dark" href="forgot-password.html">Forgot Password?</a>
                             </div>
                             <div class="text-center">
-                                <a class="small" href="login.html">Already have an account? Login!</a>
+                                <a class="small text-dark" href="login.html">Already have an account? Login!</a>
                             </div>
                         </div>
                     </div>
