--- a/myapp/templates/auth/register.html
+++ b/myapp/templates/auth/register.html
@@ -38,35 +38,29 @@
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                             </div>
-                            <form class="user">
+                            <form class="user" method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control form-control-user" id="exampleFirstName"
-                                            placeholder="Your Name">
+                                    <input type="text" class="form-control form-control-user" id="name" 
+                                        placeholder="Your Name" name="name">
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                        placeholder="Email Address">
+                                    <input type="email" class="form-control form-control-user" id="email"
+                                        placeholder="Email Address" name="email">
                                 </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="exampleInputPassword" placeholder="Password">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="exampleRepeatPassword" placeholder="Repeat Password">
-                                    </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control form-control-user"
+                                        id="password" placeholder="Password" name="password">
                                 </div>
-                                <a href="login.html" class="btn btn-dark btn-user btn-block">
+                                <button type="submit" value="Register" class="btn btn-dark btn-user btn-block">
                                     Register Account
-                                </a>
+                                </button>
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small text-dark" href="forgot-password.html">Forgot Password?</a>
+                                <a class="small text-dark" href="#">Forgot Password?</a>
                             </div>
                             <div class="text-center">
-                                <a class="small text-dark" href="login.html">Already have an account? Login!</a>
+                                <a class="small text-dark" href="#">Already have an account? Login!</a>
                             </div>
                         </div>
                     </div>
