Update class for tag in login.html

--- a/myapp/templates/auth/login.html
+++ b/myapp/templates/auth/login.html
@@ -43,26 +43,26 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                     </div>
-                                    <form class="user">
+                                    <form class="user" method="post">
                                         <div class="form-group">
                                             <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
+                                                id="email" aria-describedby="emailHelp" name="email"
                                                 placeholder="Enter Email Address...">
                                         </div>
                                         <div class="form-group">
                                             <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Password">
+                                                id="password" name="password" placeholder="Password">
                                         </div>
-                                        <a href="index.html" class="btn btn-dark btn-user btn-block">
-                                            Login
-                                        </a>
+                                        <button type="submit" value="Log in" class="btn btn-dark btn-user btn-block">
+                                            Sign In
+                                        </button>
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small text-dark" href="forgot-password.html">Forgot Password?</a>
+                                        <a class="small text-dark" href="#">Forgot Password?</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small text-dark" href="register.html">Create an Account!</a>
+                                        <a class="small text-dark" href="#">Create an Account!</a>
                                     </div>
                                 </div>
                             </div>
