--- a/myapp/templates/auth/register.html
+++ b/myapp/templates/auth/register.html
@@ -52,7 +52,7 @@
                                         id="password" placeholder="Password" name="password">
                                 </div>
                                 <button type="submit" value="Register" class="btn btn-dark btn-user btn-block">
-                                    Register Account
+                                    Sign Up
                                 </button>
                             </form>
                             <hr>
