--- a/myapp/templates/auth/register.html
+++ b/myapp/templates/auth/register.html
@@ -23,7 +23,16 @@
 </head>
 
 <body class="bg-gradient-dark">
-
+    <header>
+        {% for message in get_flashed_messages() %}
+            <div class="alert alert-danger alert-dismissible fade show text-center" role="alert">
+                <strong>{{ message }}</strong>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endfor %}
+    </header>
     <div class="container">
 
         <div class="card o-hidden border-0 shadow-lg my-5">
