--- a/myapp/templates/auth/register.html
+++ b/myapp/templates/auth/register.html
@@ -69,7 +69,7 @@
                                 <a class="small text-dark" href="#">Forgot Password?</a>
                             </div>
                             <div class="text-center">
-                                <a class="small text-dark" href="#">Already have an account? Login!</a>
+                                <a class="small text-dark" href="{{ url_for('auth.login') }}">Already have an account? Login!</a>
                             </div>
                         </div>
                     </div>
