--- a/myapp/templates/auth/login.html
+++ b/myapp/templates/auth/login.html
@@ -71,7 +71,7 @@
                                         <a class="small text-dark" href="#">Forgot Password?</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small text-dark" href="#">Create an Account!</a>
+                                        <a class="small text-dark" href="{{ url_for('auth.register') }}">Create an Account!</a>
                                     </div>
                                 </div>
                             </div>
