Add button icon on index.html

--- a/myapp/templates/purchase/index.html
+++ b/myapp/templates/purchase/index.html
@@ -14,14 +14,14 @@
         <div class="col-xl-12 col-md-12 mb-12">
             <button class="btn btn-dark btn-icon-split mr-4">
                 <span class="icon text-white-50">
-                    <i></i>
+                    <i class="fa fa-plus" aria-hidden="true"></i>
                 </span>
                 <span class="text">Add Purchase</span>
             </button>
 
             <button class="btn btn-warning btn-icon-split mr-4">
                 <span class="icon text-white-50">
-                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                    <i class="fa fa-wrench" aria-hidden="true"></i>
                 </span>
                 <span class="text">Edit</span>
             </button>
