--- a/myapp/templates/_include/base.html
+++ b/myapp/templates/_include/base.html
@@ -51,9 +51,12 @@
             <!-- Divider -->
             <hr class="sidebar-divider">
 
-
             <!-- Create Menu Here -->
-
+            <li class="nav-item active">
+                <a class="nav-link" href="{{ url_for('product.list_product') }}">
+                    <i class="fa fa-desktop" aria-hidden="true"></i>
+                    <span>Product</span></a>
+            </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
