--- a/myapp/templates/product/edit_product.html
+++ b/myapp/templates/product/edit_product.html
@@ -54,7 +54,7 @@
                         <input type="text" class="form-control form-control-user" id="stock"
                             placeholder="" name="stock" value="{{ request.form['stock'] or products['stock'] }}">
                     </div>
-                    <button type="submit" value="Edit product" class="btn btn-dark btn-user btn-block">
+                    <button type="submit" value="Edit product" class="btn btn-dark btn-user btn-block mt-5">
                         Submit
                     </button>
                 </form>
