--- a/myapp/templates/_include/base.html
+++ b/myapp/templates/_include/base.html
@@ -43,19 +43,21 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('index') }}">
+                <a class="nav-link text-center" href="{{ url_for('index') }}">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
 
-            <!-- Divider -->
-            <hr class="sidebar-divider">
-
-            <!-- Create Menu Here -->
             <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('product.list_product') }}">
+                <a class="nav-link text-center" href="{{ url_for('product.list_product') }}">
                     <i class="fa fa-desktop" aria-hidden="true"></i>
                     <span>Product</span></a>
+            </li>
+
+            <li class="nav-item active">
+                <a class="nav-link text-center" href="{{ url_for('user.list_user') }}">
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                    <span>User</span></a>
             </li>
 
             <!-- Divider -->
