--- a/myapp/templates/_include/base.html
+++ b/myapp/templates/_include/base.html
@@ -42,19 +42,23 @@
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Dashboard -->
-            <li class="nav-item active">
+            <li class="nav-item active my-2">
                 <a class="nav-link text-center" href="{{ url_for('index') }}">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span></a>
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    <span>Purchase</span></a>
             </li>
 
-            <li class="nav-item active">
+            <hr class="sidebar-divider">
+
+            <li class="nav-item active my-2">
                 <a class="nav-link text-center" href="{{ url_for('product.list_product') }}">
                     <i class="fa fa-desktop" aria-hidden="true"></i>
                     <span>Product</span></a>
             </li>
 
-            <li class="nav-item active">
+            <hr class="sidebar-divider">
+
+            <li class="nav-item active my-2">
                 <a class="nav-link text-center" href="{{ url_for('user.list_user') }}">
                     <i class="fa fa-user" aria-hidden="true"></i>
                     <span>User</span></a>
@@ -90,7 +94,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ g.user['nama'] }}</span>
+                                <span class="mr-3    d-none d-lg-inline text-gray-700 medium">{{ g.user['nama'] }}</span>
                                 <img class="img-profile rounded-circle"
                                     src="{{ url_for('static', filename='img/undraw_profile.svg') }}">
                             </a>
@@ -124,7 +128,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2020</span>
+                        <span>Copyright &copy; Red Dragon Store 2021</span>
                     </div>
                 </div>
             </footer>
