--- a/myapp/templates/purchase/index.html
+++ b/myapp/templates/purchase/index.html
@@ -1,6 +1,6 @@
 {% extends '_include/base.html' %}
 {% block content %}
-<form action="{{ url_for('purchase.printReceipt') }}" method="POST">
+<form action="{{ url_for('purchase.printReceipt') }}" method="POST" target="_blank">
     <div class="container-fluid">
         <!-- Page Heading -->
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
